samples/nginx/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pod-nginx
  labels:
    avi: ako
    pod-security.kubernetes.io/enforce: privileged
