samples/nginx/02-nginx-srvc.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  namespace: pod-nginx
spec:
  selector:
    app: hello
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
  type: ClusterIP
