samples/nginx/lb-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  namespace: pod-nginx
spec:
  selector:
    app: hello
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
  type: LoadBalancer
  loadBalancerClass: ako.vmware.com/avi-lb
